<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCqnLLeF_NFDYJ8AJo_KIg6RKeYjslLv6Q</string>
    <string name="app_name">Audtix</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Roboto-Regular.ttf</string>
    <string name="font_bold">Roboto-Black_2.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="facebook_app_id">2046118735633328</string>
    <string name="fb_login_protocol_scheme">fb2046118735633328</string>
    <string name="notification">Notifications</string>
    <string name="notification_settings">Notifications Settings</string>
    <string name="short_lorem_ipsum">LOREM IPSUM DOLOR SIT</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="forgot_email_message">Please enter your email address</string>
    <string name="submit">Submit</string>
    <string name="reset_code_head">Enter Reset Code</string>
    <string name="reset_code_message">Reset code has been sent to your email.</string>
    <string name="reset_code_message_mobile">Verification code has been sent to your Mobile.</string>
    <string name="reset_code">Reset Code</string>
    <string name="reset_code_question">Didn\'t get a code yet ?</string>
    <string name="verification_code_error">Empty Vari</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="sign_up">Signup</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="enter_FullName">Name cannot be Empty</string>
    <string name="sign_up_selection">Sign Up</string>
    <string name="home">Home</string>
    <string name="arabic">عربى</string>
    <string name="podcast">Podcasts</string>
    <string name="news">News</string>
    <string name="dashboard">My Dashboard</string>
    <string name="logout">Log Out</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="my_cart">My Cart</string>
    <string name="my_cc">My Credit Card</string>
    <string name="my_favourite">Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_available">No Data is Available</string>
    <string name="narrator">Narrator :</string>
    <string name="author">Author :</string>
    <string name="genre">Genre :</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="see_all">See All</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="most_recommended">Most Recommended</string>
    <string name="best_of_best">Best of the Best</string>
    <string name="rating">Rating : </string>
    <string name="duration">Duration :</string>
    <string name="location">Location :</string>
    <string name="about_podcast">About The Podcast</string>
    <string name="about_news">About The News</string>
    <string name="narrator_intro">Narrator Introduction</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="rate_podcast">Rate this Podcast</string>
    <string name="rate_book">Rate this Book</string>
    <string name="rate_now">Rate Now</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="min">Min</string>
    <string name="hrs">Hrs</string>
    <string name="by_duration">By Duration:</string>
    <string name="by_genre">By Genre:</string>
    <string name="chose_language">Choose Your Language</string>
    <string name="eng">English</string>
    <string name="ar">Arabic</string>
    <string name="playing_now">Playing Now</string>
    <string name="buffering_text">Something went wrong</string>
    <string name="lets_begin">Let\'s Begin</string>
    <string name="login_fb">Log In with Facebook</string>
    <string name="login_google">Log In with Google+</string>
    <string name="please_wait">Please Wait...</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password_small">Change Password</string>
    <string name="group_news">NEWS</string>
    <string name="group_podcast">PODCAST CHANNELS</string>
    <string name="group_books">BOOKS</string>
    <string name="subscribe">Subscribe</string>
    <string name="library">Your Library</string>
    <string name="downloads">DOWNLOADS</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="older">Older</string>
    <string name="downloaded_on">Downloaded On :</string>
    <string name="server_response_error">Something went wrong</string>
    <string name="resend_code_message">New Code has been send to your Email</string>
    <string name="resend_code_message_mobile">New Code has been send.</string>
    <string name="edit_profile_message">Changes Saved</string>
    <string name="rating_submit_message">Rating Submitted</string>
    <string name="item_added_favorite">Podcast has been selected as favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="episodes">Episodes</string>
    <string name="episode">Episode</string>
    <string name="dob_error_message">Please Provide Your Date of Birth</string>
    <string name="playlist_complete">Playlist Complete</string>
    <string name="item_remove_favorite">Podcast has been removed as favorite</string>
    <string name="terms_condition">Terms and Condition</string>
    <string name="i_agree">I Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_account">My Account</string>
    <string name="payment_details">Payment Details</string>
    <string name="continues_play">Continuous Play</string>
    <string name="new_episode">New Episodes</string>
    <string name="played_episodes">Played Episodes</string>
    <string name="stream">Stream when Played</string>
    <string name="download_wifi">Downloaded on wifi</string>
    <string name="donload_wifi_cell">Downloaded on wifi and cellular</string>
    <string name="keep_after_played">Keep until i delete</string>
    <string name="cc_number">Credit Card Number</string>
    <string name="ccv">CCV</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="month_year"><![CDATA[Month & Year]]></string>
    <string name="name_on_card">Name Appearing on Card</string>
    <string name="buy_now">Buy Now</string>
    <string name="show_and_episodes"><![CDATA[Shows & Episodes]]></string>
    <string name="type_your_message_here">Type your message here...</string>
</resources>