<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x15"
        android:orientation="vertical">



        <com.ingic.auditix.ui.views.AnyEditTextView
            android:id="@+id/txt_textBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x160"
            android:layout_marginTop="@dimen/x15"
            android:layout_marginBottom="@dimen/x20"
            android:background="@drawable/contact_us_box"
            android:gravity="top"
            android:scrollbars="vertical"
            android:hint="@string/type_your_message_here"
            android:textColor="@color/dark_grey"
            android:padding="@dimen/x7"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />




        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginEnd="@dimen/x30"
            android:background="@drawable/button_orange"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>