<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_pic"
                android:layout_width="@dimen/x92"
                android:layout_height="@dimen/x92"
                android:layout_marginEnd="@dimen/x10"
                android:contentDescription="@string/profile"
                android:scaleType="fitXY"
                android:src="@drawable/com_facebook_profile_picture_blank_square"/>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ingic.auditix.ui.views.AnyTextView
                    android:id="@+id/txt_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/x5"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="Just Courage"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/x16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:typeface="@string/font_normal"/>

                <ToggleButton
                    android:id="@+id/btn_subscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/x30"
                    android:layout_gravity="start|bottom"
                    android:layout_marginTop="@dimen/x10"
                    android:background="@drawable/button_orange"
                    android:paddingEnd="@dimen/x10"
                    android:paddingStart="@dimen/x10"
                    android:textOff="@string/subscribe"
                    android:textOn="@string/unsubscribe"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_title"/>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/app_gray"/>
        <com.ingic.auditix.ui.views.AnyTextView
            android:id="@+id/txt_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/x10"
            android:maxLines="1"
            android:text="@string/show_and_episodes"
            android:textAllCaps="true"
            android:textColor="@color/app_font_black"
            android:textSize="@dimen/x16"
            android:textStyle="bold"
            app:typeface="@string/font_normal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/app_gray"/>

        <com.ingic.auditix.ui.views.CustomRecyclerView
            android:id="@+id/rv_episodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"/>
        <com.ingic.auditix.ui.views.AnyTextView
            android:id="@+id/txt_episodes_no_data"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_data_available"
            android:textColor="@color/app_font_black"
            android:textSize="@dimen/x16"
            android:visibility="gone"
            app:typeface="@string/font_normal"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>