<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:orientation="vertical"
              android:padding="@dimen/x10">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_cc_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_cc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@string/font_normal"
            android:hint="@string/cc_number"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingTop="@dimen/x5"
            />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/linecc_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:background="@color/app_gray"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_ccv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_ccv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@string/font_normal"
            android:hint="@string/ccv"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:paddingTop="@dimen/x5"
            />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/lineccv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:background="@color/app_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:orientation="vertical"
        >

        <com.ingic.auditix.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:gravity="start"
            android:text="@string/valid_upto"
            android:textColor="@color/app_font_gray"
            android:textSize="@dimen/x16"
            app:typeface="@string/font_normal"/>

        <RelativeLayout
            android:id="@+id/btn_calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ingic.auditix.ui.views.AnyTextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/img_calender"
                android:gravity="start"
                android:hint="@string/month_year"
                android:textColor="@color/app_font_gray"
                android:textSize="@dimen/x16"
                app:typeface="@string/font_normal"/>

            <ImageView
                android:id="@+id/img_calender"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_alignParentEnd="true"
                android:src="@drawable/calender"/>
        </RelativeLayout>

    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:background="@color/app_gray"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@string/font_normal"
            android:hint="@string/name_on_card"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingTop="@dimen/x5"
            />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/linename"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:background="@color/app_gray"/>

    <Button
        android:id="@+id/btn_buy_now"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/button_orange"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textColor="@color/white"/>
</LinearLayout>